tests/paczka1/fuzzy1/32509552.err
Error in line 5: JXS0 A763 34,3
Error in line 6: JXS0 A456 0,7
Error in line 8: k4Y7oWER A763 65,3
Error in line 2: zio9I A373 20,8
Error in line 7: JXS0 A713 70,1
Error in line 9: k4Y7oWER A373 64,5
Error in line 19: A713 A763 17,9
Error in line 30: OaTCtE AZ56 76,7
Error in line 31: GjR02ntZbm A373 41,2
